--- a/docs/package.json
+++ b/docs/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@dtsz-ui/utils",
+  "name": "docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vitepress dev ."
   },
   "keywords": [],
   "author": "",
