--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs:dev": "pnpm -C docs dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.4",
+    "vite": "^4.0.4",
     "vue": "^3.2.45"
+  },
+  "dependencies": {
+    "@dtsz-ui/theme-chalk": "workspace:^1.0.0",
+    "@dtsz-ui/utils": "workspace:^1.0.0",
+    "dtsz-ui": "workspace:^1.0.0",
+    "sass": "^1.57.1",
+    "scss": "^0.2.4",
+    "vitepress": "1.0.0-alpha.43"
   }
 }
